update writeup comment to reflect rerun

--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "64dfb885",
+   "id": "choice-geology",
    "metadata": {},
    "source": [
     "# DSCI 525: Milestone 1\n",
@@ -15,9 +15,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "posted-sherman",
+   "metadata": {},
+   "source": [
+    "**Note to TA:** The running time and peak memory usage results vary for each rerun of the notebook. Moreover, the results are also computer-dependent. The notebook was run from start to end using Peter's PC (Windows 16Gb RAM)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1dd1fd79",
+   "id": "expensive-asthma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "698737d3",
+   "id": "spare-treasure",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9f3d2442",
+   "id": "minus-zimbabwe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ac78828",
+   "id": "verbal-auction",
    "metadata": {},
    "source": [
     "## A) Downloading the data"
@@ -72,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c6e029af",
+   "id": "recorded-walter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3a2550f8",
+   "id": "failing-guidance",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "210d7e63",
+   "id": "pending-child",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f77be79a",
+   "id": "signed-webster",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c6b7cf4",
+   "id": "republican-spelling",
    "metadata": {},
    "source": [
     "## B) Combining data CSVs"
@@ -194,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6016fbe9",
+   "id": "fabulous-brunei",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cfd417ed",
+   "id": "controversial-provider",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f1ca36b8",
+   "id": "intense-manitoba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d293991e",
+   "id": "continental-induction",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fdb44c80",
+   "id": "liberal-imaging",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4ffe6860",
+   "id": "elder-mills",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ffd6ad56",
+   "id": "supported-characterization",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "73ac6ae8",
+   "id": "textile-breach",
    "metadata": {
     "tags": []
    },
@@ -475,35 +483,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "402d9b2d",
+   "id": "personalized-verse",
    "metadata": {},
    "source": [
     "**Comparison in run times and memory usages on different machines**\n",
     "\n",
-    "Machine | Peter (Windows 16Gb RAM) |Alex (Windows 8Gb RAM) |Joshua (macOS Catalina 8Gb RAM) |Rahul (Windows 16Gb RAM) \n",
+    "Machine | Peter (Windows 16Gb RAM) |Alex (Windows 8Gb RAM) |Joshua (macOS Catalina 8Gb RAM) |Rahul \n",
     "---|---|---|---|---\n",
-    "Download data - wall time| 34.1s | 12min 10s | 4min 10s\n",
-    "Unzip data - wall time| 17.8s| 22.5s | 21.4 s\n",
-    "Combine data - wall time| 6min 10s| 8 mins 16s | 7min 14s\n",
-    "Combine data - peak memory | 110.30 MiB| 93.20 MiB| 78.52 MiB\n",
-    "Read combined data - wall time | 53.6s | 1min 50s | 1min 29s"
+    "Download data - wall time| 39.4s | 12min 10s | 4min 10s\n",
+    "Unzip data - wall time| 13.6s| 22.5s | 21.4 s\n",
+    "Combine data - wall time| 6min 3s| 8 mins 16s | 7min 14s\n",
+    "Combine data - peak memory | 136.10 MiB| 93.20 MiB| 78.52 MiB\n",
+    "Read combined data - wall time | 56.6s | 1min 50s | 1min 29s"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f9c17749",
+   "id": "bibliographic-seller",
    "metadata": {},
    "source": [
     "**Comment:**\n",
     "\n",
     "- Peter's machine can run the task faster than Alex's and Joshua's given the bigger RAM\n",
     "- Given the same RAM size for Alex's and Joshua's machine, MacOS seems to process and tast faster than Windows.\n",
-    "- Alex's machine takes the longest to download the data."
+    "- Alex's machine takes the longest to download the data.\n",
+    "- Rahul was not able to run this notebook given he just moved to Vancouver and did not have the suitable laptop adapter to work on this milestone."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5fc0765b",
+   "id": "convertible-extraction",
    "metadata": {},
    "source": [
     "## C) Load combined CSV to memory and perform a simple EDA in Python"
@@ -511,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1c1d3c0",
+   "id": "typical-mouse",
    "metadata": {},
    "source": [
     "### 1. How many records in each type of model?\n",
@@ -521,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "16c602ad",
+   "id": "after-shore",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cf52458",
+   "id": "structured-private",
    "metadata": {},
    "source": [
     "#### 1.2. Loading in chunk "
@@ -579,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "42206bb1",
+   "id": "sorted-entrance",
    "metadata": {},
    "outputs": [
     {
@@ -630,17 +639,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd589ce5",
+   "id": "specific-donor",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer-dependent)\n",
     "\n",
-    "We cut the running time almost by half by loading the data in chunk as compared to loading all data at once. There is also a peak memory savings of approximately 1000 MiB."
+    "We cut the peak memory savings from 11795.62 MiB to 9741.21 MiB by loading the data in chunks instead of loading all data at once. There is savings in running time from 55.7s to 55.1s."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "de0011a2",
+   "id": "recreational-absolute",
    "metadata": {},
    "source": [
     "### 2. What is the average rain fall (mm/day) for the respective models\n",
@@ -650,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9329adc9",
+   "id": "mathematical-baltimore",
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7b8f8fa",
+   "id": "juvenile-highland",
    "metadata": {},
    "source": [
     "#### 2.2 Only load the columns that we are interested in"
@@ -709,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e517743a",
+   "id": "circular-relations",
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efb60b2d",
+   "id": "retained-wildlife",
    "metadata": {},
    "source": [
     "#### 2.3 Using dask"
@@ -769,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a1a2f961",
+   "id": "sized-chrome",
    "metadata": {},
    "outputs": [
     {
@@ -821,18 +830,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "500def82",
+   "id": "academic-wales",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer dependent)\n",
-    "- By loading only the columns of interest instead of all the columns in the dataframe, we can save peak memory usage from 5179.16 MiB in 2.1 to  4274.40 MiB in 2.2. Running time is significantly reduced from 2min 23s to 50.9 s.\n",
+    "- By loading only the columns of interest instead of all the columns in the dataframe, we can save peak memory usage from 12302.26 MiB in 2.1 to  7220.52 MiB in 2.2. Running time is significantly reduced from 1min to 35 s.\n",
     "\n",
-    "- With dask where chunking and parallel execution are applied automatically for us, we can process the data slightly faster at 47.7s and it also takes up the least amount of memory during peak usage at 2558.66 MiB, that is only around 50% of what the traditional Pandas method consumes."
+    "- With dask where chunking and parallel execution are applied automatically for us, we can process the data faster than traditional Pandas method at 35.7 s. It also takes up the least amount of memory during peak usage at 3658.82 MiB, that is only around 50% of what the traditional Pandas method consumes."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7e97fad9",
+   "id": "extensive-buddy",
    "metadata": {},
    "source": [
     "## D) Transfer dataframe from Python to R and Perform a simple R EDA"
@@ -840,16 +849,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03ca911b",
+   "id": "modern-cabin",
    "metadata": {},
    "source": [
-    "### 1. Comparing the different file formats created in Python in terms of file size"
+    "### 1. Comparing the different file formats created in Python in terms of file size\n",
+    "\n",
+    "(Results are computer dependent)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "07ab4a8b",
+   "id": "compressed-clerk",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b995a717",
+   "id": "false-mayor",
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "120441ae",
+   "id": "pleasant-moscow",
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "67ea20c5",
+   "id": "chief-proposal",
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "48f10fa7",
+   "id": "motivated-wireless",
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cb095a2",
+   "id": "informed-plant",
    "metadata": {},
    "source": [
     "### 2. Rationale for why we chose **parquet** file format to transfer dataframe from python to R:\n",
@@ -965,7 +976,7 @@
     "\n",
     "- Hence, we preferred other columnar memory file formats like .feather or .pacquet.  because it has all the advantage of columnar format like arrow and it allows more flexible operations in data wrangling. \n",
     "\n",
-    "- Between .feather and .pacquet, we chose .pacquet given it has a more established history and we think its performance would be more stable or less bugging than .feather, which is actively developed. Moreover, .pacquet file is highly portable because its file size is the smallest for the same amount of data.\n",
+    "- Between .feather and .pacquet, we chose .pacquet given it has a more established history and we think its performance would be more stable or less bugging than .feather, which is actively developed. \n",
     "\n",
     "\n",
     "*Reference: [What is Apache Parquet and why you should use it!](https://www.upsolver.com/blog/apache-parquet-why-use)*"
@@ -973,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41c74f33",
+   "id": "seasonal-overhead",
    "metadata": {},
    "source": [
     "### 3. Transfer data file to R using pacquet and conduct a simple R EDA"
@@ -982,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ba12fe79",
+   "id": "green-pound",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7fc3a3bf",
+   "id": "vital-welcome",
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf159b50",
+   "id": "dense-wrong",
    "metadata": {},
    "source": [
     "## Closing comments"
@@ -1122,7 +1133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d712482",
+   "id": "synthetic-conditioning",
    "metadata": {},
    "source": [
     "* Given the size of this data is quite large, the time it took us to run the code is quite long.\n",
@@ -1147,7 +1158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.6"
   },
   "toc-autonumbering": false
  },
