add back rationale on portability of parquet

--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "choice-geology",
+   "id": "compound-ethnic",
    "metadata": {},
    "source": [
     "# DSCI 525: Milestone 1\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "posted-sherman",
+   "id": "advised-pipeline",
    "metadata": {},
    "source": [
     "**Note to TA:** The running time and peak memory usage results vary for each rerun of the notebook. Moreover, the results are also computer-dependent. The notebook was run from start to end using Peter's PC (Windows 16Gb RAM)"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "expensive-asthma",
+   "id": "chronic-riding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "spare-treasure",
+   "id": "prompt-louisiana",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "minus-zimbabwe",
+   "id": "bulgarian-ukraine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "verbal-auction",
+   "id": "perceived-rapid",
    "metadata": {},
    "source": [
     "## A) Downloading the data"
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "recorded-walter",
+   "id": "polyphonic-dubai",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "failing-guidance",
+   "id": "narrow-chase",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "pending-child",
+   "id": "collect-convenience",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "signed-webster",
+   "id": "annoying-cincinnati",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "republican-spelling",
+   "id": "liked-musical",
    "metadata": {},
    "source": [
     "## B) Combining data CSVs"
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fabulous-brunei",
+   "id": "acquired-stockholm",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "controversial-provider",
+   "id": "ready-mechanism",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "intense-manitoba",
+   "id": "sweet-baltimore",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "continental-induction",
+   "id": "tutorial-method",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "liberal-imaging",
+   "id": "intensive-reunion",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "elder-mills",
+   "id": "divine-switzerland",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "supported-characterization",
+   "id": "occupied-cache",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "textile-breach",
+   "id": "radical-semiconductor",
    "metadata": {
     "tags": []
    },
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "personalized-verse",
+   "id": "metric-barbados",
    "metadata": {},
    "source": [
     "**Comparison in run times and memory usages on different machines**\n",
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bibliographic-seller",
+   "id": "ancient-benefit",
    "metadata": {},
    "source": [
     "**Comment:**\n",
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "convertible-extraction",
+   "id": "innovative-thomson",
    "metadata": {},
    "source": [
     "## C) Load combined CSV to memory and perform a simple EDA in Python"
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "typical-mouse",
+   "id": "offshore-trade",
    "metadata": {},
    "source": [
     "### 1. How many records in each type of model?\n",
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "after-shore",
+   "id": "documented-commonwealth",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "structured-private",
+   "id": "iraqi-cameroon",
    "metadata": {},
    "source": [
     "#### 1.2. Loading in chunk "
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "sorted-entrance",
+   "id": "expanded-alexander",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "specific-donor",
+   "id": "sized-blair",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer-dependent)\n",
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recreational-absolute",
+   "id": "liquid-corpus",
    "metadata": {},
    "source": [
     "### 2. What is the average rain fall (mm/day) for the respective models\n",
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "mathematical-baltimore",
+   "id": "practical-cleveland",
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "juvenile-highland",
+   "id": "quarterly-blues",
    "metadata": {},
    "source": [
     "#### 2.2 Only load the columns that we are interested in"
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "circular-relations",
+   "id": "automatic-comparison",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "retained-wildlife",
+   "id": "coral-mongolia",
    "metadata": {},
    "source": [
     "#### 2.3 Using dask"
@@ -778,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "sized-chrome",
+   "id": "perceived-glance",
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "academic-wales",
+   "id": "expressed-mouth",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer dependent)\n",
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extensive-buddy",
+   "id": "answering-manufacturer",
    "metadata": {},
    "source": [
     "## D) Transfer dataframe from Python to R and Perform a simple R EDA"
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "modern-cabin",
+   "id": "mineral-hollow",
    "metadata": {},
    "source": [
     "### 1. Comparing the different file formats created in Python in terms of file size\n",
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "compressed-clerk",
+   "id": "promising-garden",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "false-mayor",
+   "id": "annual-carbon",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "pleasant-moscow",
+   "id": "damaged-intersection",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "chief-proposal",
+   "id": "modified-miami",
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "motivated-wireless",
+   "id": "future-contract",
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informed-plant",
+   "id": "muslim-signature",
    "metadata": {},
    "source": [
     "### 2. Rationale for why we chose **parquet** file format to transfer dataframe from python to R:\n",
@@ -976,7 +976,7 @@
     "\n",
     "- Hence, we preferred other columnar memory file formats like .feather or .pacquet.  because it has all the advantage of columnar format like arrow and it allows more flexible operations in data wrangling. \n",
     "\n",
-    "- Between .feather and .pacquet, we chose .pacquet given it has a more established history and we think its performance would be more stable or less bugging than .feather, which is actively developed. \n",
+    "- Between .feather and .pacquet, we chose .pacquet given it has a more established history and we think its performance would be more stable or less bugging than .feather, which is actively developed. Moreover, .pacquet file is highly portable because its file size is the smallest for the same amount of data.\n",
     "\n",
     "\n",
     "*Reference: [What is Apache Parquet and why you should use it!](https://www.upsolver.com/blog/apache-parquet-why-use)*"
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "seasonal-overhead",
+   "id": "engaging-option",
    "metadata": {},
    "source": [
     "### 3. Transfer data file to R using pacquet and conduct a simple R EDA"
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "green-pound",
+   "id": "decreased-might",
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "vital-welcome",
+   "id": "commercial-coalition",
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dense-wrong",
+   "id": "speaking-circular",
    "metadata": {},
    "source": [
     "## Closing comments"
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "synthetic-conditioning",
+   "id": "minus-doctrine",
    "metadata": {},
    "source": [
     "* Given the size of this data is quite large, the time it took us to run the code is quite long.\n",
