--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "compound-ethnic",
+   "id": "6d2e4830",
    "metadata": {},
    "source": [
     "# DSCI 525: Milestone 1\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advised-pipeline",
+   "id": "0bc8c045",
    "metadata": {},
    "source": [
     "**Note to TA:** The running time and peak memory usage results vary for each rerun of the notebook. Moreover, the results are also computer-dependent. The notebook was run from start to end using Peter's PC (Windows 16Gb RAM)"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "chronic-riding",
+   "id": "1bfa71d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "prompt-louisiana",
+   "id": "d722381d",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bulgarian-ukraine",
+   "id": "2ebc2d57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "perceived-rapid",
+   "id": "72f3d9f5",
    "metadata": {},
    "source": [
     "## A) Downloading the data"
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "polyphonic-dubai",
+   "id": "0f20069e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "narrow-chase",
+   "id": "85546ae5",
    "metadata": {},
    "outputs": [
     {
@@ -151,14 +151,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "collect-convenience",
+   "id": "b63224a6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 39.4 s\n"
+      "Wall time: 29.1 s\n"
      ]
     }
    ],
@@ -174,14 +174,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "annoying-cincinnati",
+   "id": "251f8622",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 13.6 s\n"
+      "Wall time: 15.2 s\n"
      ]
     }
    ],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liked-musical",
+   "id": "f9cbdbb2",
    "metadata": {},
    "source": [
     "## B) Combining data CSVs"
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "acquired-stockholm",
+   "id": "5e2c5ea7",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,6 @@
        " 'figshareairline\\\\CMCC-CM2-HR4_daily_rainfall_NSW.csv',\n",
        " 'figshareairline\\\\CMCC-CM2-SR5_daily_rainfall_NSW.csv',\n",
        " 'figshareairline\\\\CMCC-ESM2_daily_rainfall_NSW.csv',\n",
-       " 'figshareairline\\\\combined_data.csv',\n",
        " 'figshareairline\\\\EC-Earth3-Veg-LR_daily_rainfall_NSW.csv',\n",
        " 'figshareairline\\\\FGOALS-f3-L_daily_rainfall_NSW.csv',\n",
        " 'figshareairline\\\\FGOALS-g3_daily_rainfall_NSW.csv',\n",
@@ -253,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ready-mechanism",
+   "id": "f3a6b216",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "sweet-baltimore",
+   "id": "bf08870c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,14 +282,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "tutorial-method",
+   "id": "f245259a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 136.10 MiB, increment: 0.23 MiB\n",
+      "peak memory: 136.30 MiB, increment: 0.28 MiB\n",
       "Wall time: 6min 3s\n"
      ]
     }
@@ -310,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "intensive-reunion",
+   "id": "6e4185ea",
    "metadata": {},
    "outputs": [
     {
@@ -329,14 +328,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "divine-switzerland",
+   "id": "135f6129",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 56.6 s\n"
+      "Wall time: 1min 1s\n"
      ]
     }
    ],
@@ -348,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "occupied-cache",
+   "id": "68df5385",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "radical-semiconductor",
+   "id": "2d611f84",
    "metadata": {
     "tags": []
    },
@@ -483,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "metric-barbados",
+   "id": "afa18acf",
    "metadata": {},
    "source": [
     "**Comparison in run times and memory usages on different machines**\n",
@@ -499,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ancient-benefit",
+   "id": "a9210f62",
    "metadata": {},
    "source": [
     "**Comment:**\n",
@@ -512,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "innovative-thomson",
+   "id": "dddf1e41",
    "metadata": {},
    "source": [
     "## C) Load combined CSV to memory and perform a simple EDA in Python"
@@ -520,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "offshore-trade",
+   "id": "a4581b0c",
    "metadata": {},
    "source": [
     "### 1. How many records in each type of model?\n",
@@ -530,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "documented-commonwealth",
+   "id": "bc21902b",
    "metadata": {},
    "outputs": [
     {
@@ -539,9 +538,9 @@
      "text": [
       "MPI-ESM1-2-HR       5154240\n",
       "CMCC-CM2-SR5        3541230\n",
-      "CMCC-ESM2           3541230\n",
       "CMCC-CM2-HR4        3541230\n",
       "NorESM2-MM          3541230\n",
+      "CMCC-ESM2           3541230\n",
       "TaiESM1             3541230\n",
       "SAM0-UNICON         3541153\n",
       "FGOALS-f3-L         3219300\n",
@@ -555,18 +554,18 @@
       "ACCESS-ESM1-5       1610700\n",
       "INM-CM4-8           1609650\n",
       "INM-CM5-0           1609650\n",
-      "KIOST-ESM           1287720\n",
       "FGOALS-g3           1287720\n",
-      "MPI-ESM-1-2-HAM      966420\n",
-      "AWI-ESM-1-1-LR       966420\n",
+      "KIOST-ESM           1287720\n",
       "MPI-ESM1-2-LR        966420\n",
+      "AWI-ESM-1-1-LR       966420\n",
       "NESM3                966420\n",
+      "MPI-ESM-1-2-HAM      966420\n",
       "NorESM2-LM           919800\n",
-      "BCC-ESM1             551880\n",
       "CanESM5              551880\n",
+      "BCC-ESM1             551880\n",
       "Name: model, dtype: int64\n",
-      "peak memory: 11795.62 MiB, increment: 6671.00 MiB\n",
-      "Wall time: 55.7 s\n"
+      "peak memory: 11657.07 MiB, increment: 6534.23 MiB\n",
+      "Wall time: 58.8 s\n"
      ]
     }
    ],
@@ -579,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "iraqi-cameroon",
+   "id": "a8f81203",
    "metadata": {},
    "source": [
     "#### 1.2. Loading in chunk "
@@ -588,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "expanded-alexander",
+   "id": "3916acc2",
    "metadata": {},
    "outputs": [
     {
@@ -623,8 +622,8 @@
       "SAM0-UNICON         3541153\n",
       "TaiESM1             3541230\n",
       "dtype: int32\n",
-      "peak memory: 9741.21 MiB, increment: 2161.39 MiB\n",
-      "Wall time: 55.1 s\n"
+      "peak memory: 9624.98 MiB, increment: 2161.25 MiB\n",
+      "Wall time: 55.3 s\n"
      ]
     }
    ],
@@ -639,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sized-blair",
+   "id": "cb49a5ca",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer-dependent)\n",
@@ -649,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liquid-corpus",
+   "id": "312b8104",
    "metadata": {},
    "source": [
     "### 2. What is the average rain fall (mm/day) for the respective models\n",
@@ -659,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "practical-cleveland",
+   "id": "283e0310",
    "metadata": {},
    "outputs": [
     {
@@ -695,8 +694,8 @@
       "SAM0-UNICON         2.169676\n",
       "TaiESM1             2.224576\n",
       "Name: rain (mm/day), dtype: float64\n",
-      "peak memory: 12302.26 MiB, increment: 4505.66 MiB\n",
-      "Wall time: 1min\n"
+      "peak memory: 11833.14 MiB, increment: 4152.84 MiB\n",
+      "Wall time: 1min 2s\n"
      ]
     }
    ],
@@ -709,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quarterly-blues",
+   "id": "bfa0016c",
    "metadata": {},
    "source": [
     "#### 2.2 Only load the columns that we are interested in"
@@ -718,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "automatic-comparison",
+   "id": "16df7ff2",
    "metadata": {},
    "outputs": [
     {
@@ -754,8 +753,8 @@
       "SAM0-UNICON         2.169676\n",
       "TaiESM1             2.224576\n",
       "Name: rain (mm/day), dtype: float64\n",
-      "peak memory: 7220.52 MiB, increment: 1909.54 MiB\n",
-      "Wall time: 35 s\n"
+      "peak memory: 7066.39 MiB, increment: 1910.34 MiB\n",
+      "Wall time: 35.8 s\n"
      ]
     }
    ],
@@ -769,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coral-mongolia",
+   "id": "04f5c8ba",
    "metadata": {},
    "source": [
     "#### 2.3 Using dask"
@@ -778,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "perceived-glance",
+   "id": "66123ebd",
    "metadata": {},
    "outputs": [
     {
@@ -814,8 +813,8 @@
       "SAM0-UNICON         2.169676\n",
       "TaiESM1             2.224576\n",
       "Name: rain (mm/day), dtype: float64\n",
-      "peak memory: 3658.82 MiB, increment: 2427.56 MiB\n",
-      "Wall time: 35.7 s\n"
+      "peak memory: 3470.72 MiB, increment: 2393.04 MiB\n",
+      "Wall time: 36.8 s\n"
      ]
     }
    ],
@@ -830,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "expressed-mouth",
+   "id": "6936913c",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer dependent)\n",
@@ -841,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "answering-manufacturer",
+   "id": "b0eadda7",
    "metadata": {},
    "source": [
     "## D) Transfer dataframe from Python to R and Perform a simple R EDA"
@@ -849,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mineral-hollow",
+   "id": "15b401bc",
    "metadata": {},
    "source": [
     "### 1. Comparing the different file formats created in Python in terms of file size\n",
@@ -860,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "promising-garden",
+   "id": "42b190f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,15 +869,15 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "annual-carbon",
+   "id": "1e77b935",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 5130.21 MiB, increment: 3878.97 MiB\n",
-      "Wall time: 23.4 s\n"
+      "peak memory: 4980.05 MiB, increment: 3883.42 MiB\n",
+      "Wall time: 22.9 s\n"
      ]
     }
    ],
@@ -894,15 +893,15 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "damaged-intersection",
+   "id": "91a59895",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 5152.63 MiB, increment: 22.42 MiB\n",
-      "Wall time: 2.62 s\n"
+      "peak memory: 4998.50 MiB, increment: 21.58 MiB\n",
+      "Wall time: 2.47 s\n"
      ]
     }
    ],
@@ -917,14 +916,14 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "modified-miami",
+   "id": "45c4e508",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 5291.89 MiB, increment: 139.25 MiB\n",
+      "peak memory: 5184.34 MiB, increment: 185.82 MiB\n",
       "Wall time: 10.4 s\n"
      ]
     }
@@ -940,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "future-contract",
+   "id": "6a4ab5ba",
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +948,7 @@
      "text": [
       "5.7G\tfigshareairline/combined_data.csv\n",
       "1.1G\tfigshareairline/combined_data.feather\n",
-      "1.6G\tfigshareairline/combined_data.parquet\n"
+      "542M\tfigshareairline/combined_data.parquet\n"
      ]
     }
    ],
@@ -965,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "muslim-signature",
+   "id": "c73a12a8",
    "metadata": {},
    "source": [
     "### 2. Rationale for why we chose **parquet** file format to transfer dataframe from python to R:\n",
@@ -984,7 +983,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "engaging-option",
+   "id": "04b154a6",
    "metadata": {},
    "source": [
     "### 3. Transfer data file to R using pacquet and conduct a simple R EDA"
@@ -993,13 +992,13 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "decreased-might",
+   "id": "f0064824",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'figshareairline/combined_data.parquet\\\\153d907b145f4de88624770b9b94ad09.parquet'"
+       "'figshareairline/combined_data.parquet\\\\460369ff572d43b286e6ade5bafd370c.parquet'"
       ]
      },
      "execution_count": 26,
@@ -1015,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "commercial-coalition",
+   "id": "016255d5",
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1065,7 @@
       " 9 CMCC-ESM2              3541230\n",
       "10 EC-Earth3-Veg-LR       3037320\n",
       "# ... with 17 more rows\n",
-      "Time difference of 1.673 secs\n",
+      "Time difference of 1.699997 secs\n",
       "`summarise()` ungrouping output (override with `.groups` argument)\n",
       "# A tibble: 27 x 2\n",
       "   model            average_rainfall\n",
@@ -1082,8 +1081,8 @@
       " 9 CMCC-ESM2                    2.27\n",
       "10 EC-Earth3-Veg-LR             1.52\n",
       "# ... with 17 more rows\n",
-      "Time difference of 2.422 secs\n",
-      "Wall time: 12.3 s\n"
+      "Time difference of 2.380025 secs\n",
+      "Wall time: 12.6 s\n"
      ]
     }
    ],
@@ -1125,7 +1124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "speaking-circular",
+   "id": "8287762f",
    "metadata": {},
    "source": [
     "## Closing comments"
@@ -1133,7 +1132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "minus-doctrine",
+   "id": "81725ae0",
    "metadata": {},
    "source": [
     "* Given the size of this data is quite large, the time it took us to run the code is quite long.\n",
@@ -1158,7 +1157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.2"
   },
   "toc-autonumbering": false
  },
